[build-system]
requires = ["setuptools>=61.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexafs"
version = "1.0.0b1"
description = "A simple package for fast analysis of EXAFS data"
readme = "README.md"
authors = [{ name = "Sebastian Paripsa", email = "paripsa@uni-wuppertal.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
]
keywords = ["research-and-development", "exafs", "data-science"]
dependencies = [
    "numpy",
    "matplotlib",
    "xraylarch == 0.9.66",
    "scipy",
]

[project.optional-dependencies]
dev = ["black", "isort"]

[project.urls]
Homepage = "https://github.com/San-WierPa/pyexafs"

[project.scripts]
pyexafs = "pyexafs.__main__:main"